Stop installing the libreadline headers for libedit.
The support just isnt' good enough for ports. The rest of base (sqlite
and bgplgsh) has been fixed to reach around.

--- a/lib/libedit/Makefile
+++ b/lib/libedit/Makefile
@@ -65,7 +65,7 @@ ASRC=${LIBEDITDIR}/vi.c ${LIBEDITDIR}/emacs.c ${LIBEDITDIR}/common.c
 
 CLEANFILES+=	${AHDR} fcns.h help.h fcns.c help.c
 
-SUBDIR+=	readline
+#SUBDIR+=	readline
 HOST_SH=	sh
 
 vi.h: vi.c makelist
