Document the cpsw driver. Feedback from many. OK jsg@

--- a/share/man/man4/man4.beagle/Makefile
+++ b/share/man/man4/man4.beagle/Makefile
@@ -1,6 +1,7 @@
-#	$BitRig$
+#	$OpenBSD: Makefile,v 1.1 2013/06/06 15:30:51 bmercer Exp $
 
-SUBDIR=	
-MAN=
+MAN=	cpsw.4
+
+MANSUBDIR=beagle
 
 .include <bsd.prog.mk>
