--- a/etc/mtree/4.4BSD.dist
+++ b/etc/mtree/4.4BSD.dist
@@ -1,4 +1,4 @@
-#	$OpenBSD: 4.4BSD.dist,v 1.231 2013/06/02 14:11:38 florian Exp $
+#	$OpenBSD: 4.4BSD.dist,v 1.232 2013/06/06 15:30:51 bmercer Exp $
 
 /set type=dir uname=root gname=wheel mode=0755
 # .
@@ -692,6 +692,8 @@ man3p
 man4
 
 amd64
+..
+beagle
 ..
 i386
 ..
