--- a/share/man/man4/Makefile
+++ b/share/man/man4/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.549 2013/06/03 16:06:42 tedu Exp $
+#	$OpenBSD: Makefile,v 1.550 2013/06/06 15:30:51 bmercer Exp $
 
 MAN=	aac.4 ac97.4 acphy.4 \
 	acpi.4 acpiac.4 acpiasus.4 acpibat.4 acpibtn.4 acpicpu.4 acpidock.4 \
@@ -95,7 +95,7 @@ MLINKS+=tty.4 cua.4
 MLINKS+=usb.4 uhub.4
 MLINKS+=vlan.4 svlan.4
 
-SUBDIR=	man4.amd64 man4.i386
+SUBDIR=	man4.amd64 man4.beagle man4.i386 
 
 CLEANFILES+= wi.4
 
