add miscfs to include/Makefile so that fuse headers are installed.
miscfs was removed by thorduri, but we need it back unless we want to
move fuse.

--- a/include/Makefile
+++ b/include/Makefile
@@ -34,7 +34,7 @@ MFILES=	frame.h
 LFILES=	fcntl.h syslog.h termios.h stdarg.h stdint.h varargs.h
 
 DIRS=	arpa protocols rpc rpcsvc
-LDIRS=	altq crypto ddb dev isofs msdosfs net netinet netinet6 \
+LDIRS=	altq crypto ddb dev isofs miscfs msdosfs net netinet netinet6 \
 	netmpls netnatm net80211 netbt nfs scsi sys tmpfs ufs uvm
 
 # Places that need a prerequisite target met before includes
