--- a/sys/arch/imx/conf/Makefile.imx
+++ b/sys/arch/imx/conf/Makefile.imx
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.beagle,v 1.39 2012/08/22 16:58:26 pascal Exp $
+#	$OpenBSD: Makefile.beagle,v 1.44 2013/06/23 20:33:51 miod Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -21,14 +21,14 @@ S!=	cd ../../../..; pwd
 _machdir?=	$S/arch/${_mach}
 _archdir?=	$S/arch/${_arch}
 
-INCLUDES=	-nostdinc -I. -I$S -I$S/arch
+INCLUDES=	-nostdinc -I$S -I. -I$S/arch
 CPPFLAGS=	${INCLUDES} ${IDENT} ${PARAM} -D_KERNEL -D__${_mach}__ -MD -MP
 CWARNFLAGS=	-Werror -Wall -Wstrict-prototypes -Wmissing-prototypes \
 		-Wno-main -Wno-uninitialized -Wno-format -Wno-pointer-sign \
 		-Wno-conditional-uninitialized
 #		-Wstack-larger-than-2047
 
-CMACHFLAGS=	-ffreestanding -msoft-float # -march=armv4 -mtune=strongarm
+CMACHFLAGS=	-ffreestanding -msoft-float -march=armv6
 #CMACHFLAGS+=	-fno-builtin-printf -fno-builtin-snprintf \
 #		-fno-builtin-vsnprintf -fno-builtin-log \
 #		-fno-builtin-log2 -fno-builtin-malloc ${NOPIE_FLAGS}
@@ -38,7 +38,7 @@ CMACHFLAGS+=	-fno-stack-protector
 
 COPTS?=		-O2
 CFLAGS=		${DEBUG} ${CWARNFLAGS} ${CMACHFLAGS} ${COPTS} ${PIPE}
-AFLAGS=		-D_LOCORE -x assembler-with-cpp ${CMACHFLAGS}
+AFLAGS=		-D_LOCORE -x assembler-with-cpp ${CWARNFLAGS} ${CMACHFLAGS}
 LINKFLAGS=	-T ldscript --warn-common -nopie
 
 .if ${IDENT:M-DDDB_STRUCT}
