--- a/sys/arch/imx/conf/Makefile.imx
+++ b/sys/arch/imx/conf/Makefile.imx
@@ -28,7 +28,7 @@ CWARNFLAGS=	-Werror -Wall -Wstrict-prototypes -Wmissing-prototypes \
 		-Wno-conditional-uninitialized
 #		-Wstack-larger-than-2047
 
-CMACHFLAGS=	-ffreestanding -msoft-float -march=armv6
+CMACHFLAGS=	-ffreestanding -msoft-float
 #CMACHFLAGS+=	-fno-builtin-printf -fno-builtin-snprintf \
 #		-fno-builtin-vsnprintf -fno-builtin-log \
 #		-fno-builtin-log2 -fno-builtin-malloc ${NOPIE_FLAGS}
