move stdatomic.h to sys/sys and add it to include/Makefile's LFILES; discussed with oga@. remove some vax machine-dependent goo while there

--- a/include/Makefile
+++ b/include/Makefile
@@ -24,14 +24,10 @@ FILES=	a.out.h ar.h assert.h bitstring.h blf.h bm.h bsd_auth.h \
 	time.h ttyent.h tzfile.h unistd.h utime.h utmp.h vis.h \
 	wchar.h wctype.h
 
-FILES+=	link.h link_aout.h link_elf.h
-
-.if (${MACHINE_ARCH} != "vax")
-FILES+= ieeefp.h
-.endif
+FILES+=	link.h link_aout.h link_elf.h ieeefp.h
 
 MFILES=	frame.h
-LFILES=	fcntl.h syslog.h termios.h stdarg.h stdint.h varargs.h
+LFILES=	fcntl.h syslog.h termios.h stdarg.h stdatomic.h stdint.h varargs.h
 
 DIRS=	arpa protocols rpc rpcsvc
 LDIRS=	altq crypto ddb dev isofs miscfs msdosfs net netinet netinet6 \
