--- a/bin/csh/Makefile
+++ b/bin/csh/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.10 2010/01/04 17:50:36 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.11 2013/07/13 16:34:43 miod Exp $
 #
 # C Shell with process control; VM/UNIX VAX Makefile
 # Bill Joy UC Berkeley; Jim Kulp IIASA, Austria
